--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@preline/overlay": "^2.0.2",
     "axios": "^1.6.7",
     "firebase": "^10.8.0",
     "flowbite-react": "^0.7.2",
@@ -38,6 +39,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.35",
+    "preline": "^2.0.3",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animated": "^1.0.1",
     "vite": "^5.1.0"
