--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
+    "react-tooltip": "^5.26.3",
     "react-use-websocket": "^4.7.0",
     "socket.io-client": "^4.7.4",
     "sort-by": "^1.2.0",
